undo govno-path part 2